--- a/src/app/posts/posts-list/posts-list.component.html
+++ b/src/app/posts/posts-list/posts-list.component.html
@@ -1,8 +1,12 @@
-@for (post of posts(); track post.id) {
-  <div>
-    <p>{{ post.id }}</p>
-    <p>{{ post.userId }}</p>
-    <p>{{ post.title }}</p>
-    <p>{{ post.body }}</p>
-  </div>
+@if (errorMessage()) {
+  <p>Error: {{ errorMessage() }}</p>
+} @else {
+  @for (post of posts(); track post.id) {
+    <div>
+      <p>{{ post.id }}</p>
+      <p>{{ post.userId }}</p>
+      <p>{{ post.title }}</p>
+      <p>{{ post.body }}</p>
+    </div>
+  }
 }
