--- a/src/app/posts/posts-list/posts-list.component.html
+++ b/src/app/posts/posts-list/posts-list.component.html
@@ -2,11 +2,19 @@
   <p>Error: {{ errorMessage() }}</p>
 } @else {
   @for (post of posts(); track post.id) {
-    <div>
-      <p>{{ post.id }}</p>
-      <p>{{ post.userId }}</p>
-      <p>{{ post.title }}</p>
-      <p>{{ post.body }}</p>
-    </div>
+    <mat-card class="post">
+      <mat-card-header>
+        <mat-card-title>
+          {{ post.title }}
+        </mat-card-title>
+        <mat-card-subtitle> {{ post.userId }} TODO: Author </mat-card-subtitle>
+      </mat-card-header>
+      <mat-card-content>
+        <p>{{ post.body }}</p>
+      </mat-card-content>
+      <mat-card-actions>
+        <a mat-button routerLink="/posts/1">Learn More</a>
+      </mat-card-actions>
+    </mat-card>
   }
 }
