Add user loading

--- a/src/app/posts/posts-page/posts-page.component.html
+++ b/src/app/posts/posts-page/posts-page.component.html
@@ -1,5 +1,9 @@
 @if (loading()) {
   <p>Loading...</p>
 } @else {
-  <app-posts-list [posts]="posts()" [errorMessage]="errorMessage()" />
+  <app-posts-list
+    [posts]="posts()"
+    [users]="users()"
+    [errorMessage]="errorMessage()"
+  />
 }
