--- a/src/app/posts/posts-list/posts-list.component.html
+++ b/src/app/posts/posts-list/posts-list.component.html
@@ -1,20 +1,9 @@
 @if (errorMessage()) {
   <p>Error: {{ errorMessage() }}</p>
 } @else {
-  @for (post of posts(); track post.id) {
-    <mat-card class="post">
-      <mat-card-header>
-        <mat-card-title>
-          {{ post.title }}
-        </mat-card-title>
-        <mat-card-subtitle> {{ post.userId }} TODO: Author </mat-card-subtitle>
-      </mat-card-header>
-      <mat-card-content>
-        <p>{{ post.body }}</p>
-      </mat-card-content>
-      <mat-card-actions>
-        <a mat-button routerLink="/posts/1">Learn More</a>
-      </mat-card-actions>
-    </mat-card>
-  }
+  <div class="posts">
+    @for (post of posts(); track post.id) {
+      <app-post-details [post]="post" [user]="users()[post.userId]" />
+    }
+  </div>
 }
