Add post comments

--- a/src/app/posts/post-details/post-details.component.html
+++ b/src/app/posts/post-details/post-details.component.html
@@ -1,4 +1,4 @@
-<mat-card class="post">
+<mat-card appearance="outlined" class="post">
   <mat-card-header>
     <mat-card-title>
       {{ post().title }}
