--- a/src/app/posts/posts-page/posts-page.component.html
+++ b/src/app/posts/posts-page/posts-page.component.html
@@ -4,7 +4,8 @@
 <div *ngIf="!loading(); else loadingElement">
   <div class="container">
     <app-posts-list
-      [posts]="posts()">
+      [posts]="posts()"
+      [users]="users()">
     </app-posts-list>
   </div>
 </div>
