--- a/src/app/posts/posts-list/posts-list.component.html
+++ b/src/app/posts/posts-list/posts-list.component.html
@@ -1,12 +1,14 @@
-<p>posts-list works:</p>
 <div *ngIf="posts?.length! > 0; else emptyElement">
-  <ul role="list">
-    <li *ngFor="let post of posts">
-      <div>
-        <p>{{ users ? users[post.userId!.toString()]?.username : '' }}</p>
-        <p>{{ post.body }}</p>
-      </div>
-    </li>
-  </ul>
+@for (post of posts; track post) {
+  <mat-card class="post-card-short" appearance="outlined">
+    <mat-card-header>
+      <mat-card-title>{{ post.title }}</mat-card-title>
+      <mat-card-subtitle>{{ users ? users[post.userId!.toString()]?.username : '' }}</mat-card-subtitle>
+    </mat-card-header>
+    <mat-card-content>
+      <p>{{ post.body && post.body.length < 150 ? post.body : post.body.substring(0, 150) + '...' }}</p>
+    </mat-card-content>
+  </mat-card>
+}
 </div>
-<ng-template #emptyElement>Empty...</ng-template>
+<ng-template #emptyElement>No data</ng-template>
