--- a/src/app/guest-book/guest-book-list/guest-book-list.component.html
+++ b/src/app/guest-book/guest-book-list/guest-book-list.component.html
@@ -1,9 +1,15 @@
 <mat-card appearance="outlined">
-  <mat-list>
+  <ul class="list">
     @for (entry of entries(); track entry.id) {
-      <mat-list-item>
-        {{ entry.author.name }}: {{ entry.message }}
-      </mat-list-item>
+      <li class="entry">
+        <button mat-icon-button>
+          <mat-icon class="icon">person</mat-icon>
+        </button>
+        <div class="content">
+          <span class="author">{{ entry.author.name }}</span>
+          <span>{{ entry.message }}</span>
+        </div>
+      </li>
     }
-  </mat-list>
+  </ul>
 </mat-card>
