--- a/src/app/guest-book/guest-book-page/guest-book-page.component.html
+++ b/src/app/guest-book/guest-book-page/guest-book-page.component.html
@@ -1,4 +1,6 @@
 <div class="page">
   <app-guest-book-form [saving]="saving()" (formSubmitted)="onSubmit($event)" />
-  <app-guest-book-list [entries]="entries()" />
+  @if (!loading()) {
+    <app-guest-book-list [entries]="entries()" />
+  }
 </div>
