Add guest book author dialog

--- a/src/app/guest-book/guest-book-list/guest-book-list.component.html
+++ b/src/app/guest-book/guest-book-list/guest-book-list.component.html
@@ -2,7 +2,7 @@
   <ul class="list">
     @for (entry of entries(); track entry.id) {
       <li class="entry">
-        <button mat-icon-button>
+        <button mat-icon-button (click)="onClick(entry.author)">
           <mat-icon class="icon">person</mat-icon>
         </button>
         <div class="content">
