--- a/src/app/guest-book/guest-book-page/guest-book-page.component.html
+++ b/src/app/guest-book/guest-book-page/guest-book-page.component.html
@@ -1,6 +1,9 @@
 <div class="page">
   <app-guest-book-form [saving]="saving()" (formSubmitted)="onSubmit($event)" />
   @if (!loading()) {
-    <app-guest-book-list [entries]="entries()" />
+    <app-guest-book-list
+      [entries]="entries()"
+      (authorClicked)="onAuthorClick($event)"
+    />
   }
 </div>
