--- a/src/app/posts/post-page/post-page.component.html
+++ b/src/app/posts/post-page/post-page.component.html
@@ -5,6 +5,6 @@
       Posts
     </a>
     <app-post-details [post]="post()!" [user]="user()" [showActions]="false" />
-    <app-post-comments [comments]="(postComments$() | async) ?? []" />
+    <app-post-comments [comments]="postComments()" />
   </div>
 }
