--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,13 @@
-<app-container></app-container>
+<nav mat-tab-nav-bar
+     [tabPanel]="tabPanel"
+     mat-stretch-tabs="false"
+     mat-align-tabs="start"
+     class="navbar"
+>
+  @for (link of links; track link) {
+    <a mat-tab-link
+       (click)="activeLink = link"
+       [active]="activeLink === link"> {{ link }} </a>
+  }
+</nav>
+<mat-tab-nav-panel #tabPanel></mat-tab-nav-panel>
