--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,5 @@
+@use '@angular/material' as mat;
+
 body {
 }
 
@@ -6,6 +8,13 @@ html, body {
 }
 
 body {
-  margin: 0;
-  font-family: Roboto, "Helvetica Neue", sans-serif;
+  @include mat.theme((
+    color: (
+      theme-type: light,
+      primary: mat.$azure-palette,
+      tertiary: mat.$blue-palette,
+    ),
+    typography: Roboto,
+    density: 0,
+  ));
 }
