add server and routing

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,33 +1,2 @@
-<div class="header-tabs">
-  <button class="tab active">Blogs</button>
-  <button class="tab">Guest Book</button>
-</div>
-
-<div class="blog-list">
-  <h2>Blog Posts</h2>
-  <ul>
-    <li>
-      <button>
-        <h3>Understanding Angular Directives</h3>
-        <p>Learn the basics of Angular directives and how to use them in your projects.</p>
-        <small>Published: May 10, 2025</small>
-      </button>
-    </li>
-    <li>
-      <button>
-        <h3>Getting Started with Angular Routing</h3>
-        <p>A beginner's guide to setting up and using routing in Angular applications.</p>
-        <small>Published: May 15, 2025</small>
-      </button>
-    </li>
-    <li>
-      <button>
-        <h3>Top 5 Angular Performance Tips</h3>
-        <p>Boost your Angular app's performance with these essential tips.</p>
-        <small>Published: May 20, 2025</small>
-      </button>
-    </li>
-  </ul>
-</div>
-
-<app-guest-book></app-guest-book>
+<app-site-header></app-site-header>
+<router-outlet></router-outlet>
