--- a/src/app/blog-list/blog-list.component.html
+++ b/src/app/blog-list/blog-list.component.html
@@ -2,7 +2,7 @@
   <h2>Blog Posts</h2>
   <ul>
     <li *ngFor="let blog of blogs">
-      <button>
+      <button (click)="onBlogSelected(blog)" class="blog-item">
         <h3>{{ blog.title }}</h3>
         <p [innerHTML]="blog.blogHtml.substring(0, 120)"></p>
         <small>Published: {{ blog.date | date:'mediumDate' }}</small>
