Added track by for comments. Added local storage service.

--- a/src/app/posts/post-details/post-details.component.html
+++ b/src/app/posts/post-details/post-details.component.html
@@ -1,3 +1,6 @@
+<div class="card error-card" *ngIf="errorMessage() !== ''">
+  Error: {{ errorMessage() }}
+</div>
 <mat-card class="post-card" appearance="outlined" *ngIf="post() as post">
   <mat-card-header>
     <mat-card-title>{{ post.title }}</mat-card-title>
@@ -7,9 +10,8 @@
     <p>{{ post.body }}</p>
   </mat-card-content>
 </mat-card>
-
 <mat-list>
-  <mat-list-item *ngFor="let comment of comments$ | async">
+  <mat-list-item *ngFor="let comment of comments$ | async; trackBy: commentIdent">
     <span matListItemTitle>{{ comment.name }}</span>
     <span matListItemLine>{{ comment.body }}</span>
   </mat-list-item>
