--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,6 +2,7 @@
   background-color: var(--mat-sys-surface-tint);
   corner-shape: round;
   border-radius: 10px;
+  margin-bottom: 10px;
 }
 
 .mat-mdc-tab-nav-bar {
