--- a/src/app/blog-list/blog-list.component.html
+++ b/src/app/blog-list/blog-list.component.html
@@ -1,7 +1,7 @@
 <div class="blog-list">
   <h2>Blog Posts</h2>
   <ul>
-    <li *ngFor="let blog of blogs">
+    <li *ngFor="let blog of blogs$ | async" class="blog-item-container">
       <button (click)="onBlogSelected(blog)" class="blog-item">
         <h3>{{ blog.title }}</h3>
         <p [innerHTML]="blog.blogHtml.substring(0, 120)"></p>
