--- a/src/app/blog-posts/blog-posts-container/blog-posts-container.component.scss
+++ b/src/app/blog-posts/blog-posts-container/blog-posts-container.component.scss
@@ -1,4 +1,8 @@
 .blogpost-card {
-  max-width: 300px;
-  margin-bottom: 8px;
+  width: 272px;
+  margin: 0 20px 10px 0;
+}
+
+.blogpost-card-img {
+  max-width: 50px;
 }
