--- a/src/app/blog-posts/blog-posts.component.html
+++ b/src/app/blog-posts/blog-posts.component.html
@@ -1,1 +1,1 @@
-<app-blog-posts-container [blogposts] = blogPosts></app-blog-posts-container>
+<app-blog-posts-container class="blogposts" [blogposts] = blogPosts></app-blog-posts-container>
