--- a/src/app/blog-posts/blog-posts-container/blog-posts-container.component.scss
+++ b/src/app/blog-posts/blog-posts-container/blog-posts-container.component.scss
@@ -1,8 +1,12 @@
 .blogpost-card {
-  width: 272px;
+  width: 18%;
   margin: 0 20px 10px 0;
 }
 
 .blogpost-card-img {
   max-width: 50px;
+}
+
+.blogpost-content {
+  min-height: 36px;
 }
