Added creationDate to guest book entry

--- a/src/app/guest-book/guest-book-list/guest-book-list.component.html
+++ b/src/app/guest-book/guest-book-list/guest-book-list.component.html
@@ -1,4 +1,4 @@
-<p>guest-book-list works!</p>
+<h3>Guest book entries:</h3>
 <div *ngIf="guestBookEntries?.length! > 0; else emptyElement">
 @for (guestBookEntry of guestBookEntries; track guestBookEntry) {
   <mat-card class="post-card-short" appearance="outlined" >
