--- a/src/app/guest-book/guest-book.component.html
+++ b/src/app/guest-book/guest-book.component.html
@@ -4,10 +4,35 @@
   <!-- Entries List -->
   <ul class="entries">
     <li *ngFor="let entry of guestMessages$ | async">
+      <img 
+        #avatarImg
+        [src]="'assets/avatars/' + (entry.avatar ? entry.avatar : 'user-m.png')" 
+        (error)="avatarImg.src='assets/avatars/user-m.png'"
+        alt="Avatar"
+        class="avatar"
+        width="40" height="40"
+        (click)="selectedEntry = entry"
+        style="cursor:pointer"
+      />
       <strong>{{ entry.name }}</strong> ({{ entry.email }})<br>
       <span>{{ entry.message }}</span>
     </li>
   </ul>
+
+  <!-- Avatar Popup -->
+  <div 
+    class="avatar-popup" 
+    *ngIf="selectedEntry" 
+    (click)="selectedEntry = null"
+    tabindex="0"
+  >
+    <div class="avatar-popup-content" (click)="$event.stopPropagation()">
+      <h3>{{ selectedEntry.name }}</h3>
+      <p><strong>Email:</strong> {{ selectedEntry.email }}</p>
+      <p><strong>Gender:</strong> {{ selectedEntry.gender }}</p>
+      <button (click)="selectedEntry = null">Close</button>
+    </div>
+  </div>
 
   <!-- Add Entry Form -->
   <form #guestForm="ngForm" (ngSubmit)="addEntry()" autocomplete="off">
