Adjust error handling

--- a/src/app/posts/post-page/post-page.component.html
+++ b/src/app/posts/post-page/post-page.component.html
@@ -1,10 +1,17 @@
-@if (post()) {
+@if (postsErrorMessage()) {
+  <p>Error {{ postsErrorMessage() }}</p>
+} @else if (post()) {
   <div class="post-page">
     <a class="posts-link" mat-button routerLink="/posts">
       <mat-icon>arrow_back</mat-icon>
       Posts
     </a>
     <app-post-details [post]="post()!" [user]="user()" [showActions]="false" />
-    <app-post-comments [comments]="postComments()" />
+
+    @if (commentsErrorMessage()) {
+      <p>Error {{ commentsErrorMessage() }}</p>
+    } @else {
+      <app-post-comments [comments]="postComments()" />
+    }
   </div>
 }
