add signals and pagination to blog page

--- a/src/app/blog-list/blog-list.component.html
+++ b/src/app/blog-list/blog-list.component.html
@@ -1,7 +1,7 @@
 <div class="blog-list">
   <h2>Blog Posts</h2>
   <ul class="blog-list-grid">
-    <li *ngFor="let blog of blogs$ | async" class="blog-item-container">
+    <li *ngFor="let blog of blogsSignal().slice((currentPage()-1)*pageSize, currentPage()*pageSize)" class="blog-item-container">
       <button (click)="onBlogSelected(blog)" class="blog-item">
         <h3>{{ blog.title }}</h3>
         <p [innerHTML]="blog.blogHtml.substring(0, 120)"></p>
@@ -9,4 +9,10 @@
       </button>
     </li>
   </ul>
+
+  <div class="pagination bright-pagination" *ngIf="(blogsSignal().length || 0) > pageSize">
+    <button (click)="currentPage.set(currentPage() - 1)" [disabled]="currentPage() === 1">Prev</button>
+    <span>Page {{currentPage()}} of {{totalPages()}}</span>
+    <button (click)="currentPage.set(currentPage() + 1)" [disabled]="currentPage() === totalPages()">Next</button>
+  </div>
 </div>
