--- a/src/app/guest-book/forms/guest-book-input-form/guest-book-input-form.component.html
+++ b/src/app/guest-book/forms/guest-book-input-form/guest-book-input-form.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="guestBookForm" (ngSubmit)="onSubmit()" class="guestBookForm">
+<form [formGroup]="guestBookForm" class="guestBookForm">
   <h3>Author information:</h3>
   <div formGroupName="author" class="authorForm">
     <p>
