--- a/src/app/guest-book/guest-book-list/guest-book-list.component.html
+++ b/src/app/guest-book/guest-book-list/guest-book-list.component.html
@@ -1,11 +1,14 @@
 <h3>Guest book entries:</h3>
 <div *ngIf="guestBookEntries?.length! > 0; else emptyElement">
 @for (guestBookEntry of guestBookEntries; track guestBookEntry.id) {
-  <mat-card class="post-card-short" appearance="outlined" >
+  <mat-card class="guest-list-card" appearance="outlined">
     <mat-card-header>
-      <!-- <mat-card-title>{{ post.title }}</mat-card-title>
-      <mat-card-subtitle>{{ users ? users[post.userId!.toString()]?.username : '' }}</mat-card-subtitle> -->
-      <img appGravatar [email]="guestBookEntry.author!.email" class="rounded-circle shadow-sm">
+      <div mat-card-avatar>
+        <img mat-card appGravatar [email]="guestBookEntry.author!.email" class="rounded-circle user-gravatar" />
+      </div>
+      <mat-card-title>{{ guestBookEntry.author.username }}</mat-card-title>
+      <mat-card-subtitle>{{ guestBookEntry.creationDate | date:'short' }}</mat-card-subtitle>
+
     </mat-card-header>
     <mat-card-content>
       <p>{{ guestBookEntry.message }}</p>
