change to signal

--- a/src/app/guest-book/comment-panel/comment/comment.component.html
+++ b/src/app/guest-book/comment-panel/comment/comment.component.html
@@ -1,6 +1,6 @@
-  <!-- Entries List -->
+<!-- Entries List -->
   <ul class="entries">
-    <li *ngFor="let entry of guestMessages$ | async">
+    <li *ngFor="let entry of guestMessagesSignal()">
       <img 
         #avatarImg
         [src]="'assets/avatars/' + (entry.avatar ? entry.avatar : 'user-m.png')" 
