--- a/src/app/posts/post-page/post-page.component.html
+++ b/src/app/posts/post-page/post-page.component.html
@@ -1,11 +1,14 @@
-@if (postsErrorMessage()) {
-  <p>Error {{ postsErrorMessage() }}</p>
-} @else if (post()) {
-  <div class="post-page">
-    <a class="posts-link" mat-button routerLink="/posts">
-      <mat-icon>arrow_back</mat-icon>
-      Posts
-    </a>
+<div class="post-page">
+  <a class="posts-link" mat-button routerLink="/posts">
+    <mat-icon>arrow_back</mat-icon>
+    Posts
+  </a>
+
+  @if (postsLoading()) {
+    <p>Loading...</p>
+  } @else if (postsErrorMessage()) {
+    <p>Error {{ postsErrorMessage() }}</p>
+  } @else if (post()) {
     <app-post-details [post]="post()!" [user]="user()" [showActions]="false" />
 
     @if (commentsErrorMessage()) {
@@ -13,5 +16,7 @@
     } @else {
       <app-post-comments [comments]="postComments()" />
     }
-  </div>
-}
+  } @else {
+    <p>Post not found.</p>
+  }
+</div>
