--- a/src/app/blog-comment/blog-comment.component.scss
+++ b/src/app/blog-comment/blog-comment.component.scss
@@ -104,3 +104,9 @@ ul {
   background: #bfc2e6;
   cursor: not-allowed;
 }
+.validation-message {
+  color: #ff6b6b;
+  font-size: 0.95rem;
+  margin-bottom: 0.5rem;
+  margin-top: -0.5rem;
+}
