--- a/src/app/components/guest-page/guest-entries/guest-entries.component.html
+++ b/src/app/components/guest-page/guest-entries/guest-entries.component.html
@@ -1,12 +1,19 @@
 <div class="entries-container">
-  <div *ngFor="let entry of entries" class="entry-card">
-    <div class="entry-header">
-      <span>{{entry.name}}: &nbsp;</span>
-      <small>{{entry.createdAt | date:'short'}}</small>
-    </div>
-    <div class="entry-content">
-      {{entry.message}}
-    </div>
-    <button (click)="onViewAuthor(entry)">View Author Info</button>
-  </div>
+  <mat-card *ngFor="let entry of entries$ |async" class="entry-card">
+    <mat-card-header>
+      <mat-card-title>{{entry.name}}</mat-card-title>
+    </mat-card-header>
+
+    <mat-divider></mat-divider>
+
+    <mat-card-content>
+      <p>{{entry.message}}</p>
+    </mat-card-content>
+
+    <mat-card-actions>
+      <button mat-button color="primary" (click)="onViewAuthor(entry)">
+        View Author
+      </button>
+    </mat-card-actions>
+  </mat-card>
 </div>
