--- a/src/app/components/guest-page/guest-book/guest-book.component.html
+++ b/src/app/components/guest-page/guest-book/guest-book.component.html
@@ -1,18 +1,12 @@
-<div class="guest-book-container">
-  <h1>Guest Book</h1>
-  
-  <app-guest-form 
-    (newEntry)="handleNewEntry($event)">
-  </app-guest-form>
+<mat-card class="guest-book-container">
+  <mat-card-header>
+    <mat-card-title>Guest Book</mat-card-title>
+  </mat-card-header>
 
-  <app-guest-entries 
-    [entries]="entries"
-    (showAuthorDetails)="handleShowAuthorDetails($event)">
-  </app-guest-entries>
+  <mat-card-content>
+    <app-guest-form></app-guest-form>
+    <app-guest-entries></app-guest-entries>
+  </mat-card-content>
+</mat-card>
 
-  <app-author-popup 
-    *ngIf="showPopup"
-    [entry]="selectedEntry"
-    (close)="handleClosePopup()">
-  </app-author-popup>
-</div> 
+<app-author-popup *ngIf="showPopup$"></app-author-popup>
