add redirect on main if blog-comment links to unexisting comment and throws an error

--- a/src/app/blog-comment/blog-comment.component.scss
+++ b/src/app/blog-comment/blog-comment.component.scss
@@ -110,3 +110,12 @@ ul {
   margin-bottom: 0.5rem;
   margin-top: -0.5rem;
 }
+.error-message {
+  color: #ff6b6b;
+  background: #23262f;
+  border-radius: 6px;
+  padding: 1rem;
+  margin: 1rem 0;
+  font-weight: bold;
+  text-align: center;
+}
