--- a/src/app/blog-comment/blog-comment.component.html
+++ b/src/app/blog-comment/blog-comment.component.html
@@ -8,6 +8,10 @@
     <div class="blog-content" [innerHTML]="blog.blogHtml"></div>
   </div>
 
+  <div *ngIf="errorMessage" class="error-message">
+    {{ errorMessage }}
+  </div>
+
   <div class="comments-section">
     <h3>Comments</h3>
     <ng-container *ngIf="commentsSignal() as comments">
